--- a/blogpost.html
+++ b/blogpost.html
@@ -13,6 +13,11 @@
             <h1>Este es el titulo atractivo e interesante del post</h1>
             <p>Y este es el parrafo de inicio donde vamos a explicar les cosas 
             increibles que se pueden hacer con ramas</p>
+            <p>Los blogs son la mejor forma de compartir informacion y tus ideas.
+                mucho mas que is a conferencias o salir en youtube.
+                excepto si eres un rockstar. Pero estadisticamente no lo eres...
+                por ahora
+            </p>
         </div>
     </div>
     
