--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,7 @@
         <div id="cabecera">
             Hyperblog
             <span id="tagline">
-                Tu blog de confianza
+                Tu blog de maestro
             </span>
         </div>
         <div id="post">
@@ -24,6 +24,7 @@
                 excepto si eres un rockstar. Pero estadisticamente no lo eres...
                 por ahora
             </p>
+            <p>Suscribete y dale like</p>
         </div>
     </div>
     
